@@ -6904,6 +6904,20 @@ void WriteTile( int layer, int x, int y, int tile, bool is8bit, bool mask);
  *     TO the tile page, overwriting the tile 'tile', either 4 or 8 bit.
  * If 'mask' is true, overlays instead of overwrites
 
+void MaskDraw( int layer, bitmap mask, int color )
+ * Draws 'color' to the bitmap, on any pixels that are non-color-0 on the mask.
+
+void Dither( int layer, bitmap mask, int color, int ditherType, int ditherArg )
+ * Draws 'color' to the bitmap, using a dithering pattern, only on pixels that are
+ * non-color-0 on the mask bitmap.
+ * Use 'DITH_' constants from std_constants.zh for 'ditherType'.
+
+void ReplaceColors( int layer, int color, int startCol, int endCol )
+ * Replaces colors >= startCol and <= endCol with 'color'
+ 
+void ShiftColors( int layer, int shift, int startCol, int endCol )
+ * Adds 'shift' to colors >= startCol and <= endCol
+
 void Blit	
 	( 
 		int layer, 
