@@ -3234,3 +3234,19 @@ DEFINE UNBLOCK_IGNR = 0010b; //Bypasses 'ignore' defenses
 DEFINE UNBLOCK_SHLD = 0100b; //Bypasses enemy/hero 'shields'
 DEFINE UNBLOCK_REFL = 1000b; //Bypasses hero 'reflect' on shields
 DEFINE UNBLOCK_ALL  = 1111b; //All bits set
+
+enum ditherType
+{
+	DITH_CHECKER, DITH_CHECKER_INV,
+	DITH_CRISS_CROSS, DITH_CRISS_CROSS_INV,
+	DITH_DIAG_ULDR, DITH_DIAG_ULDR_INV,
+	DITH_DIAG_URDL, DITH_DIAG_URDL_INV,
+	DITH_ROW, DITH_ROW_INV,
+	DITH_COL, DITH_COL_INV,
+	DITH_DOTS, DITH_DOTS_INV,
+	DITH_GRID, DITH_GRID_INV,
+	DITH_STATIC, DITH_STATIC_INV,
+	DITH_STATIC2, DITH_STATIC2_INV,
+	DITH_STATIC3, DITH_STATIC3_INV,
+	DITH_MAX
+};
