@@ -2941,6 +2941,10 @@ enum ASM_DEFINE
 	ITEMDEL,
 	
 	BMPWRITETILE,
+	BMPDITHER,
+	BMPREPLCOLOR,
+	BMPSHIFTCOLOR,
+	BMPMASKDRAW,
 	
 	NUMCOMMANDS           //0x01A4
 };
